Fix ordering of response_geo_ips